--- a/res/layout/person_item_view.xml
+++ b/res/layout/person_item_view.xml
@@ -21,7 +21,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <com.cyanogenmod.messaging.ui.AttributionContactIconView
+    <com.vrtoxin.messaging.ui.AttributionContactIconView
         android:id="@+id/contact_icon"
         android:layout_width="@dimen/contact_list_icon_size"
         android:layout_height="@dimen/contact_list_icon_size"
