messaging: bring back accent color
also update fab icon to match mms staging/swiftshark

Change-Id: I217da3339dcfbe87388b5ee06b156e37c205df4f
Signed-off-by: jrizzoli <joey@cyanogenmoditalia.it>

--- a/res/values/vrtoxin_colors.xml
+++ b/res/values/vrtoxin_colors.xml
@@ -14,6 +14,7 @@
     limitations under the License.
 -->
 <resources>
+    <color name="cm_accent">#00adef</color>
     <!-- New text colors from layouts to make theme chooser apk easier to theme -->
     <color name="compose_message_edit_text">#000000</color>
     <color name="compose_message_text_counter">#cc333333</color>
